# assisted-architecture-management

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  .mcp.json  ANALYSIS-rename-stale-index.md  ARTIFACT_INDEX_REWRITE.md  CLAUDE.md  Dockerfile  EFFECT_FRONTEND_REFACTOR_SPEC.md  IMPLEMENTATION-PLAN.md  IMPL_PLAN_entity_spec_refactor.md  LICENSE  ORCHESTRATION-datatype-type-resolution.md  PLAN-OUTLINE-archimate-4-compliance.md  PLAN-aibom-model-derived.md  PLAN-archimate-4-compliance.md  PLAN-archimate-next-rule-conformance-and-repository-cleanup.md  PLAN-assurance-architecture-model.md  PLAN-assurance-storage-confidentiality.md  PLAN-assurance-stpa-grc.md  PLAN-attribute-profile-registry.md  PLAN-backend-runtime-unification.md  PLAN-c4-self-model-narrative.md  PLAN-canonical-artifact-index.md  PLAN-code-coverage-uplift.md  PLAN-datatype-er-diagrams.md  PLAN-datatype-type-resolution.md  PLAN-diagram-puml-editing.md  PLAN-docs-rework.md  PLAN-domain-layer-purity.md  PLAN-gui-correctness-and-assurance-completeness.md  PLAN-gui-correctness-and-assurance-remediation.md  PLAN-mcp-write-tooling-optimization.md  PLAN-meta-ontology-v2.md  PLAN-meta-ontology.md  PLAN-modeling-ux-and-self-model-uplift.md  PLAN-navigation-and-tier-transparency.md  PLAN-openapi-modeling-query.md  PLAN-projects-feature.md  (+67 more)
.arch-assurance/: .gitignore
.claude/agents/: vp-fmea-calibrator.md  vp-heuristic-reviewer-a.md  vp-heuristic-reviewer-b.md  vp-persona-runner.md
.claude/skills/: archimate-modelling  architecture-modelling
.github/workflows/: ci.yml
config/: connection_ontology.yaml  entity_ontology.yaml  settings.server.yaml  settings.yaml
docker/: Caddyfile  entrypoint.sh
docs/: 01-motivation.md  02-installation.md  06-showcase.md  07-first-model.md  index.md
docs/03-modeling/: coverage-semantics.md  diagramming.md  impact-analysis.md  index.md  interfaces-and-mcp.md  projects-and-grouping.md  viewpoints.md  views-and-exploration.md
docs/04-assurance/: aibom.md  diagrams.md  exploring-assurance.md  gui-capability-design.md  index.md  mcp-tools.md  methods.md  security-signals.md  storage-and-confidentiality.md
docs/05-extensibility/: diagram-type-modules.md  document-types.md  guidance.md  hexagonal-architecture.md  index.md  ontology-modules.md  schemata-and-profiles.md
docs/architecture/: assurance-gui-capability-design.md  decisions.md  dependency-policy.md  glossary.md
docs/media/: manifest.json
docs/reference/: archimate-4-conformance.md  cli-and-backend.md  configuration.md  docker-compose.md  git-sync-promotion.md  licensing.md  rest-api.md  upgrade-guide.md  viewpoints-schema.md
engagements/ENG-ARCH-REPO/: IMPLEMENTATION-PLAN.md
licenses/: native.json  npm.json  python.json
plans/assurance-overlay/: PHASE-0-module-extension.md  README.md
plans/meta-ontology-v2/: FORMALIZATION.md  IMPL-phases-0-2.md  PLAN-c4-renderer-fix.md  PLAN-diagram-view-derivation.md  SPEC-phase-3-derivation-paths-materialization.md  SPEC-phase-4-sequence-sysml-bridges.md
skills/archimate-modelling/: SKILL.md
skills/architecture-modelling/: SKILL.md
skills/assurance-case/: SKILL.md
skills/cast-investigation/: SKILL.md
skills/grc-management/: SKILL.md
skills/reverse-architecture/: SKILL.md
skills/stpa-analysis/: SKILL.md
spec/: architecture-repo.md  incremental-entity-context-read-model.md
spec/personas/: personas.yaml
specs/: archimate-modeling-skill-research-guide.md  document-support-progress.md  promotion-verification-plan.md  unified-backend.md
src/application/: __init__.py  _artifact_aggregation.py  _artifact_query_helpers.py  _artifact_search.py  _diagram_entity_extraction.py  _search_eligibility.py  _startup_schema_policy.py  aibom_coverage.py  aibom_derivation.py  aibom_projection.py  aibom_role_loading.py  artifact_document_schema.py  artifact_parsing.py  artifact_query.py  artifact_repository.py  artifact_schema.py  artifact_scoring.py  assurance_analysis.py  assurance_diagrams.py  assurance_edge_catalog.py  assurance_edge_enrichment.py  assurance_exposure.py  assurance_gsn.py  assurance_guidance.py  assurance_model_bind.py  assurance_mutations.py  assurance_neighbors.py  assurance_ports.py  assurance_promotion.py  assurance_queries.py  candidate_repository.py  document_links.py  entity_type_predicates.py  git_repair.py  global_reference_endpoints.py  group_registry.py  group_registry_validation.py  guidance_composition.py  identifier_allocator.py  mutation_authorization.py  (+8 more)
src/common/: _artifact_query_helpers.py  _artifact_search.py  _model_query_helpers.py  _verifier_rules_grf.py  _verifier_rules_schema.py  archimate_relation_rendering.py  archimate_types.py  artifact_document_schema.py  artifact_parsing.py  artifact_query.py  artifact_query_cli.py  artifact_repository.py  artifact_schema.py  artifact_scoring.py  artifact_types.py  artifact_verifier.py  artifact_verifier_incremental.py  artifact_verifier_parsing.py  artifact_verifier_registry.py  artifact_verifier_rules.py  artifact_verifier_syntax.py  artifact_verifier_types.py  artifact_write.py  artifact_write_catalog.py  artifact_write_formatting.py  artifact_write_layout.py  connection_ontology.py  domain_vocabulary.py  model_index.py  model_query.py  model_query_cli.py  model_query_parsing.py  model_query_repository.py  model_query_scoring.py  model_query_types.py  model_schema.py  model_verifier.py  model_verifier_incremental.py  model_verifier_parsing.py  model_verifier_registry.py  (+12 more)
src/config/: __init__.py  assurance_settings.py  git_identity.py  repo_paths.py  settings.py  viewpoints_settings.py  workspace_paths.py
src/diagram_kinds/: README.md  __init__.py  _archimate_kind.py
tests/: conftest.py
tools/: _datatype_type_migration.py  benchmark_assurance_direct_reads.py  check_doc_links.py  check_licenses.py  export_doc_diagrams.py  extract_guidance.py  fetch_c19c_xsds.sh  generate_mcp_docs.py  generate_notices.py  generate_types.py  ingest_security_signals.py  migrate_datatype_type_refs.py  migrate_diagrams_to_bindings.py  refresh_security_signals.py  sizing_spike_trace_coverage.py
(+3886 files in other folders)
