[project]
name = "architectonic"
version = "0.1.0"
description = "Architectonic — architecture as code for humans and AI: a typed, verifiable, git-versioned model with MCP, REST, CLI, and GUI access, plus safety/security/GRC assurance."
requires-python = ">=3.13"
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "mcp>=1.27.0",
    "python-frontmatter>=1.1.0",
    "anyio>=4.0",
    "jsonschema>=4.0",
    "sqlcipher3>=0.5.0",
    "keyring>=25.0",
    "keyrings.alt>=4.0",
    "httpx>=0.25",
    "cryptography>=42.0",
]


[project.scripts]
arch-gui-server = "src.infrastructure.gui.gui_server:main"
arch-backend = "src.infrastructure.backend.arch_backend:main"
arch-mcp-stdio-read = "src.infrastructure.mcp.arch_mcp_stdio:main"
arch-mcp-stdio-write = "src.infrastructure.mcp.arch_mcp_stdio_write:main_write"
arch-init = "src.infrastructure.workspace.workspace_init:main"
arch-switch-engagement = "src.infrastructure.workspace.switch_engagement:main"
get-plantuml = "src.infrastructure.bootstrap.get_plantuml:main"
get-diagram-runtime = "src.infrastructure.bootstrap.get_diagram_runtime:main"
check-diagram-runtime = "src.infrastructure.bootstrap.check_diagram_runtime:main"
arch-write-cli = "src.infrastructure.write.artifact_write_cli:main"
arch-assurance = "src.infrastructure.cli.arch_assurance:main"
arch-repair = "src.infrastructure.cli.arch_repair:main"
arch-mcp-stdio-assurance-read = "src.infrastructure.mcp.arch_mcp_stdio_assurance:main_read"
arch-mcp-stdio-assurance-write = "src.infrastructure.mcp.arch_mcp_stdio_assurance:main_write"
arch-import-guidance = "src.infrastructure.cli.arch_import_guidance:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 120
extend-exclude = [
    ".arch",
    ".venv",
    "engagements",
    "enterprise-repository",
    "tests",
    "tools/gui",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto"
markers = [
    "perf_manual: opt-in, machine-dependent performance benchmarks; enable with ARCH_PERF_MANUAL=1",
]
# Coverage is opt-in to keep the default quality-gate run fast. Enable with:
#   uv run pytest --cov            (terminal summary with missing lines)
#   uv run pytest --cov --cov-report=html   (browsable htmlcov/ report)
# The --cov flag needs no argument; the measured package is configured below.

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/__pycache__/*",
    "src/infrastructure/gui/gui_server.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 1
# Coverage bases (measured 2026-06): 78.6% statement/line · 75.7% combined · 66% branch.
# The canonical, reported figure is statement/line coverage (~79%) — this is also what
# Codecov shows by default. Because branch=true above, coverage.py's headline
# `percent_covered` (and therefore `fail_under`) is the branch-INCLUSIVE combined metric
# (~76%), not the line figure — do not compare a line-basis target against it.
# `fail_under` is a ratchet for explicit `--cov` runs only; it never blocks the default
# (no-coverage) quality-gate run. Raise it as coverage improves.
fail_under = 74
# Only lines that genuinely cannot be exercised by tests. Each pattern below was
# checked against src/: TYPE_CHECKING blocks (30, import-only), abstract method
# bodies (6), __main__ entry guards (16), and bare `...` Protocol/stub bodies.
# The ellipsis pattern is anchored to a whole line so it never swallows real
# `tuple[str, ...]` annotations.
exclude_also = [
    "if TYPE_CHECKING:",
    "@(abc\\.)?abstractmethod",
    "if __name__ == .__main__.:",
    "^\\s*\\.\\.\\.\\s*$",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.zuban]
mode = "default"
python_version = "3.13"
files = [
    "src",
]
exclude = "(^|/)(\\.arch|\\.venv|engagements|enterprise-repository|tools/gui)(/|$)"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_unreachable = true

[project.optional-dependencies]
s3-archive = ["boto3>=1.34"]
azure-archive = ["azure-storage-blob>=12.19", "azure-identity>=1.15"]
cloud-archive = ["boto3>=1.34", "azure-storage-blob>=12.19", "azure-identity>=1.15"]

[dependency-groups]
dev = [
    "hypothesis>=6.0",
    "pytest>=8.3",
    "pytest-bdd>=7.3",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.5",
    "ruff>=0.15.11",
    "zuban>=0.7.0",
    "moto[s3]>=5.0",
    "boto3>=1.34",
]
gui = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]
